--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Hi I am Jyothsna</h1>
     <h1 id="title">Welcome to CI/CD Demo</h1>
+    <h2>Jyothsna</h2>
 <p>This site is deployed automatically.</p>
 <button onclick="changeText()">Click Me</button>
 <script src="script.js"></script>
